<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="weather.lab4gr12.compumovil.udea.edu.co.l4g12_weather.MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ciudad"
        android:id="@+id/textView"
        android:textSize="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="136dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/search_city"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:hint="@string/example" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buscar"
        android:id="@+id/bt_search"
        android:layout_below="@+id/search_city"
        android:layout_toEndOf="@+id/textView"
        android:layout_alignParentStart="true" />
</RelativeLayout>
